# AdventofCode2024

./: CMakeLists.txt  create_new_task.py  template.cpp
task01/: CMakeLists.txt  main.cpp
task01/part01/: CMakeLists.txt  main.cpp
task01/part02/: CMakeLists.txt  main.cpp
task02/: CMakeLists.txt  main.cpp
task02/part01/: CMakeLists.txt  main.cpp
task02/part02/: CMakeLists.txt  main.cpp
task03/part01/: CMakeLists.txt  main.cpp
task03/part02/: CMakeLists.txt  main.cpp
task04/part01/: CMakeLists.txt
task04/part02/: CMakeLists.txt
task05/: CMakeLists.txt
task05/part01/: CMakeLists.txt  main.cpp
task05/part02/: CMakeLists.txt  main.cpp
task06/part01/: CMakeLists.txt  main.cpp
task06/part02/: CMakeLists.txt  main.cpp
task06/part02-mt/: CMakeLists.txt  main.cpp
task07/: CMakeLists.txt
task07/part01/: CMakeLists.txt  main.cpp
task07/part02/: CMakeLists.txt  main.cpp
task07/part02-mt/: CMakeLists.txt  main.cpp
task08/part01/: CMakeLists.txt  main.cpp
task08/part02/: CMakeLists.txt  main.cpp
task09/part01/: CMakeLists.txt  main.cpp
task09/part02/: CMakeLists.txt  main.cpp
task10/part01/: CMakeLists.txt  main.cpp
task10/part02/: CMakeLists.txt  main.cpp
task11/part01/: CMakeLists.txt
task11/part02/: CMakeLists.txt  main.cpp
task12/part01/: CMakeLists.txt  main.cpp
task12/part02/: CMakeLists.txt  main.cpp
task13/part1/: CMakeLists.txt  main.cpp
task13/part2/: CMakeLists.txt  main.cpp
